preemptive work for being backend agnostic/retrieving more app data

--- a/src/ga-search-widget.ui
+++ b/src/ga-search-widget.ui
@@ -82,7 +82,7 @@
             <property name="ellipsize">end</property>
             <property name="single-line-mode">true</property>
             <binding name="label">
-              <lookup name="name" type="FlatpakRef">
+              <lookup name="title" type="GaEntry">
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
