--- a/src/ga-search-widget.ui
+++ b/src/ga-search-widget.ui
@@ -76,13 +76,38 @@
         <property name="margin-end">6</property>
         <property name="spacing">6</property>
         <child>
+          <object class="GtkImage">
+            <property name="icon-size">large</property>
+            <binding name="paintable">
+              <lookup name="icon-paintable" type="GaEntry">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+          </object>
+        </child>
+        <child>
           <object class="GtkLabel">
-            <property name="hexpand">true</property>
             <property name="xalign">0</property>
             <property name="ellipsize">end</property>
             <property name="single-line-mode">true</property>
             <binding name="label">
               <lookup name="title" type="GaEntry">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
+            </binding>
+          </object>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <style>
+              <class name="dim-label"/>
+            </style>
+            <property name="hexpand">true</property>
+            <property name="xalign">1</property>
+            <property name="ellipsize">end</property>
+            <property name="single-line-mode">true</property>
+            <binding name="label">
+              <lookup name="description" type="GaEntry">
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
