--- a/src/ga-window.ui
+++ b/src/ga-window.ui
@@ -6,8 +6,8 @@
     <property name="title" translatable="yes">Gnome Apps Next</property>
     <property name="default-width">1000</property>
     <property name="default-height">800</property>
-    <property name="width-request">400</property>
-    <property name="height-request">600</property>
+    <property name="width-request">200</property>
+    <property name="height-request">400</property>
     <property name="content">
       <object class="AdwBottomSheet" id="sheet">
         <property name="bottom-bar">
@@ -68,7 +68,7 @@
             <property name="margin-bottom">70</property>
             <property name="hexpand">TRUE</property>
             <property name="vexpand">TRUE</property>
-            <property name="label">Downloads Will Appear Here</property>
+            <property name="label">Downloads</property>
           </object>
         </property>
         <property name="content">
