--- a/src/ga-window.ui
+++ b/src/ga-window.ui
@@ -116,6 +116,59 @@
                             <property name="vexpand">TRUE</property>
                           </object>
                         </child>
+                        <child>
+                          <object class="AdwStatusPage" id="status">
+                            <property name="visible">FALSE</property>
+                            <property name="hexpand">TRUE</property>
+                            <property name="vexpand">TRUE</property>
+                            <property name="title">Welcome</property>
+                            <property name="description">Choose an action:</property>
+                            <property name="child">
+                              <object class="GtkGrid">
+                                <property name="halign">center</property>
+                                <property name="column-spacing">48</property>
+                                <property name="row-spacing">18</property>
+                                <child>
+                                  <object class="GtkBox">
+                                    <property name="margin-top">12</property>
+                                    <property name="spacing">12</property>
+                                    <property name="homogeneous">true</property>
+                                    <layout>
+                                      <property name="row">4</property>
+                                      <property name="column">0</property>
+                                      <property name="column-span">2</property>
+                                    </layout>
+                                    <child>
+                                      <object class="GtkButton">
+                                        <property name="label">Search</property>
+                                        <property name="action-name">app.search</property>
+                                        <style>
+                                          <class name="pill"/>
+                                        </style>
+                                      </object>
+                                    </child>
+                                    <child>
+                                      <object class="GtkButton">
+                                        <property name="label">Browse</property>
+                                        <property name="action-name">app.browse</property>
+                                        <style>
+                                          <class name="pill"/>
+                                        </style>
+                                      </object>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GaBrowseWidget" id="browse">
+                            <property name="visible">FALSE</property>
+                            <property name="hexpand">TRUE</property>
+                            <property name="vexpand">TRUE</property>
+                          </object>
+                        </child>
                       </object>
                     </property>
                   </object>
